# miniscience-kalashnikov

01-meshes/: CMakeLists.txt  README.md  perry.cpp  perry.stl  thor.cpp
02-vtk/: CMakeLists.txt  README.md  bunny.cpp
03-fenics/: CMakeLists.txt  Poisson.h  Poisson.ufl  README.md  conv.py  main.cpp
